syntax="proto3";
option go_package="./proto/admin";
package admin;

service Admin{
  rpc AdminLogin(LoginRequest) returns (LoginResponse){};
  rpc UserList (UsersRequest) returns(UsersResponse){};
  rpc UserDel (DelRequest) returns(DelResponse){};
}

message UserInfo{
  int32 id=1;
  string email=2;
  int32 score=3;
  string createTime=4;
}

message DelResponse{
  int32 code=1;
  string msg=2;
}

message DelRequest{
  int32 id=1;
}

message UsersResponse{
  int32 code=1;
  string msg=2;
  repeated UserInfo users=3;
  int32 count=4;
}

message UsersRequest{
  int32 pageSize=1;
  int32 pageNum=2;
}

message LoginResponse{
  int32 code=1;
  string msg=2;
}

message LoginRequest{
  string username=1;
  string password=2;
}